# lelem

./: .gitignore  Cargo.toml  config.yaml
src/: api_db.rs  generate_confirmation.rs  generate_json.rs  main.rs  match_endpoint.rs  match_fields.rs  models.rs  ollama.rs  ollama_client.rs
